--- a/package.json
+++ b/package.json
@@ -1,13 +1,26 @@
 {
-  "name": "jhb",
+  "name": "ji_home_node_server",
   "version": "1.0.0",
-  "description": "jhb",
-  "main": "dist/server.js",
-  "author": "jhb",
+  "description": "JI-Home node.js based restful server",
+  "main": "index.js",
+  "scripts": {
+    "test": "console.log('the server is up and running on port 2222');",
+    "build": "webpack",
+    "dev": "ts-node ./lib/server.ts",
+    "start": "nodemon ./dist/server.js",
+    "prod": "npm run build && npm run start"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://LeeLoganSteiner@bitbucket.org/ittinc/ji_home_node_server.git"
+  },
+  "author": "ITT-team",
   "license": "ISC",
+  "homepage": "https://bitbucket.org/ittinc/ji_home_node_server#readme",
   "dependencies": {
     "bluebird": "^3.5.2",
     "body-parser": "^1.18.3",
+    "crypto-js": "^3.1.9-1",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "faye-websocket": "^0.11.1",
@@ -24,6 +37,7 @@
   "devDependencies": {
     "@types/bluebird": "^3.5.24",
     "@types/body-parser": "^1.17.0",
+    "@types/crypto-js": "^3.1.43",
     "@types/dotenv": "^4.0.3",
     "@types/express": "^4.16.0",
     "@types/js-base64": "^2.3.1",
@@ -34,7 +48,7 @@
     "@types/socket.io": "^1.4.38",
     "@types/winston": "^2.4.4",
     "@types/ws": "^6.0.1",
-    "ts-loader": "^5.0.0",
+    "ts-loader": "^5.1.0",
     "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
     "typescript": "^3.0.3",
