--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
-DB_HOST=128.199.39.117
-DB_USER=node
-DB_PASSWORD=edon
-DB_DATABASE=pretty_chat
+PORT=2222
+
+DB_HOST=82.202.202.180
+DB_USER=monty
+DB_PASSWORD=1qaz@WSX3edc
+DB_DATABASE=JINGA
 DB_PORT=3306
