--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # compiled output
+/dist
 /tmp
 /out-tsc
 
@@ -39,3 +40,6 @@ Thumbs.db
 
 # local developing logs
 combined.log
+
+# .env file
+.env
