--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./dist/server.js",
   "scripts": {
     "build": "webpack",
-    "dev": "webpack --watch & nodemon",
+    "dev": "nodemon",
     "prod": "npm run build && npm run start",
     "start": "node ./dist/server.js"
   },
@@ -45,16 +45,16 @@
     "@types/js-base64": "^2.3.1",
     "@types/mkdirp": "^0.5.2",
     "@types/mysql": "^2.15.5",
-    "@types/node": "^10.9.4",
+    "@types/node": "^10.10.1",
     "@types/redis": "^2.8.6",
     "@types/socket.io": "^1.4.38",
     "@types/winston": "^2.4.4",
     "@types/ws": "^6.0.1",
-    "ts-loader": "^5.1.0",
+    "ts-loader": "^5.1.1",
     "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
     "typescript": "^3.0.3",
-    "webpack": "^4.18.1",
+    "webpack": "^4.19.0",
     "webpack-cli": "^3.1.0",
     "webpack-node-externals": "^1.7.2"
   }
