--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
         "moduleResolution": "node",
         "pretty": true,
         "sourceMap": true,
+        "strictNullChecks": true,
         "target": "es6",
         "outDir": "./dist",
         "baseUrl": "./lib"
