--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.16.3",
     "faye-websocket": "^0.11.1",
     "js-base64": "^2.4.9",
+    "jsonwebtoken": "^8.3.0",
     "mkdirp": "^0.5.1",
     "mysql": "^2.16.0",
     "nodemon": "^1.18.4",
@@ -43,6 +44,7 @@
     "@types/dotenv": "^4.0.3",
     "@types/express": "^4.16.0",
     "@types/js-base64": "^2.3.1",
+    "@types/jsonwebtoken": "^7.2.8",
     "@types/mkdirp": "^0.5.2",
     "@types/mysql": "^2.15.5",
     "@types/node": "^10.10.1",
