--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "bluebird": "^3.5.2",
     "body-parser": "^1.18.3",
+    "cors": "^2.8.4",
     "crypto-js": "^3.1.9-1",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
@@ -40,6 +41,7 @@
   "devDependencies": {
     "@types/bluebird": "^3.5.24",
     "@types/body-parser": "^1.17.0",
+    "@types/cors": "^2.8.4",
     "@types/crypto-js": "^3.1.43",
     "@types/dotenv": "^4.0.3",
     "@types/express": "^4.16.0",
@@ -56,7 +58,7 @@
     "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
     "typescript": "^3.0.3",
-    "webpack": "^4.19.0",
+    "webpack": "^4.19.1",
     "webpack-cli": "^3.1.0",
     "webpack-node-externals": "^1.7.2"
   }
