--- a/.env
+++ b/.env
@@ -1,9 +1,10 @@
 PORT=2222
 
-DB_HOST=82.202.202.180
-DB_USER=monty
+DB_HOST=195.239.5.90
+# DB_HOST=127.0.0.1
+DB_USER=user
 DB_PASSWORD=1qaz@WSX3edc
-DB_DATABASE=JINGA
+DB_DATABASE=jinga
 DB_PORT=3306
 
 SECRET=LeeLoganSteiner
