--- a/package.json
+++ b/package.json
@@ -20,46 +20,57 @@
   "license": "ISC",
   "homepage": "https://bitbucket.org/ittinc/ji_home_node_server#readme",
   "dependencies": {
+    "async-mkdirp": "^1.2.4",
+    "bcryptjs": "^2.4.3",
     "bluebird": "^3.5.2",
     "body-parser": "^1.18.3",
+    "busboy": "^0.2.14",
     "cors": "^2.8.4",
-    "crypto-js": "^3.1.9-1",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "express-fileupload": "^1.0.0-alpha.1",
     "faye-websocket": "^0.11.1",
     "js-base64": "^2.4.9",
     "jsonwebtoken": "^8.3.0",
     "mkdirp": "^0.5.1",
+    "multer": "^1.4.0",
+    "multiparty": "^4.2.1",
     "mysql": "^2.16.0",
     "nodemon": "^1.18.4",
     "promise-mysql": "^3.3.1",
     "redis": "^2.8.0",
     "socket.io": "^2.1.1",
+    "tmp": "0.0.33",
+    "type-is": "^1.6.16",
     "winston": "^3.1.0",
     "ws": "^6.0.0"
   },
   "devDependencies": {
     "@types/bluebird": "^3.5.24",
     "@types/body-parser": "^1.17.0",
+    "@types/busboy": "^0.2.3",
     "@types/cors": "^2.8.4",
-    "@types/crypto-js": "^3.1.43",
     "@types/dotenv": "^4.0.3",
     "@types/express": "^4.16.0",
     "@types/js-base64": "^2.3.1",
     "@types/jsonwebtoken": "^7.2.8",
     "@types/mkdirp": "^0.5.2",
+    "@types/multer": "^1.3.7",
+    "@types/multiparty": "0.0.31",
     "@types/mysql": "^2.15.5",
-    "@types/node": "^10.10.1",
+    "@types/node": "^10.11.2",
     "@types/redis": "^2.8.6",
     "@types/socket.io": "^1.4.38",
+    "@types/tmp": "0.0.33",
+    "@types/type-is": "^1.6.2",
     "@types/winston": "^2.4.4",
     "@types/ws": "^6.0.1",
-    "ts-loader": "^5.1.1",
+    "ts-loader": "^5.2.1",
     "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
-    "typescript": "^3.0.3",
-    "webpack": "^4.19.1",
-    "webpack-cli": "^3.1.0",
+    "typescript": "^3.1.1",
+    "webpack": "^4.20.2",
+    "webpack-cli": "^3.1.1",
     "webpack-node-externals": "^1.7.2"
   }
 }
